--- a/style.css
+++ b/style.css
@@ -78,8 +78,16 @@ h1 {
     display: flex;
     width: 100%;
     align-items: center;
-    margin-top: 15px;
+    margin-top: 5px;
     gap: 5px;
+}
+
+.erro {
+    width: 100%;
+    height: 10px;
+    text-align: center;
+    margin-top: 15px;
+    font-weight: bolder;
 }
 
 .input_valor {
